LU-11111 lfsck: print correct parent FID

The LFSCK debug message for repairing a striped directory incorrectly
prints the child FID twice, rather than printing the parent FID:

  MDT0002-osd: namespace repair shard 0 [0x68002f9d1:0xa47c:0x0] ...
           ... of the striped directory [0x68002f9d1:0xa47c:0x0]

Fix this to print the parent FID.

Test-Parameters: trivial
Signed-off-by: Andreas Dilger <adilger@whamcloud.com>
Change-Id: I94b530ca6eaa07ee93bb8154bba8d356ce2f2896
Reviewed-on: https://review.whamcloud.com/32935
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Lai Siyao <lai.siyao@whamcloud.com>
Reviewed-by: Ben Evans <bevans@cray.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>